--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -67,7 +68,7 @@
           </div>
         </div>
         <footer>
-          <h4>Let's Connect!</h4>
+          <h3 class="enlarge">Let's Connect!</h3>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
               <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
@@ -76,7 +77,7 @@
             <a href="contact.html">
             <img src="images/mail.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
           </div>
-          <h6 class="copyright">Copyright Alana Macedo 2020</h6>
+          <h6 class="copyright">© Alana Macedo 2020</h6>
         </footer>
   </body>
 </html>
