--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a href="#vision-case-container">Work</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -75,14 +76,14 @@
             <div class="vision-case-container">
               <div class="big-margin smaller-margin">
                 <div class="vision-case-image">
-                  <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center home-proto desktop-proto">
+                  <img src="images/desktop-proto.png" alt="images/desktop-proto.png" id="home-proto" class="center">
                 </div>
                 <div class="about-vision-casestudy">
-                  <h3 class="left vision-index-style">Vision</h3>
-                  <h5 class="left freight">User Experience Design</h5>
-                    <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
+                    <h3 class="left project enlarge">Vision</h3>
+                    <h5 class="left freight">User Experience Design</h5>
+                      <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
                   <div class="view-casestudy">
-                    <a href="project.html" class="button-view-cs button">VIEW CASE STUDY</a>
+                    <a href="project.html" class="button" id="button-view-cs">VIEW CASE STUDY</a>
                   </div>
                 </div>
               </div>
@@ -90,7 +91,7 @@
           </section>
         </div>
         <footer>
-          <h4 class="vision-index-style">Let's Connect!</h4>
+          <h3 class="enlarge">Let's Connect!</h3>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
               <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
@@ -99,7 +100,7 @@
             <a href="contact.html">
             <img src="images/mail.png" alt="images/email.png" class="social-media" width="width" height="height"></a>
           </div>
-          <h6 class="copyright">Copyright Alana Macedo 2020</h6>
+          <h6 class="copyright">© Alana Macedo 2020</h6>
         </footer>
   </body>
 </html>
