--- a/project.html
+++ b/project.html
@@ -38,6 +38,7 @@
                   <li><a href="index.html">Work</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -258,24 +259,43 @@
               </article>
               <article>
                 <h3>Wireframes</h3>
-                  <p>When I began wireframing, I sketched out the layout of every page before digitizing it. Along the way I made some design decisions to improve the layout. I noticed that horizontal scrolling was not as intuitive on desktops, therefore,
-                    changed the calendar to a vertical scroll that moves with real-time.
-                  </p>
+                  <p>When I began wireframing, I sketched out the layout of every page before digitizing it. Along the way I made some design decisions to improve the layout. I noticed that horizontal scrolling was not as intuitive on desktops, therefore, changed the calendar to a vertical scroll that moves with real-time. </p>
                   <div class="wireframes">
                     <img src="images/homepage-sketch.png" alt="" class=" wire-sketch center eighty-vw">
                     <img src="images/homepage-wireframe.png" alt="" class="lo-fi center eighty-vw">
                   </div>
+                  <p>With my wireframes, I conducted in-person usability tests where I asked participants to accomplish four tasks: Add content, organize content, pin content to a Vision Board, and tag a user in a document. I started out each usability test asking the users to describe the homepage to me. Some feedback was that the alerts could be bolden or too create a separate notification section with an icon.
+                  </p>
+                  <p class="change-font">Adding Content</p>
+                  <p> In the homepage featured above, participants searched for an option to upload straight from the homepage. Once they could not find that option, they clicked "Drive". From there, users found the option to upload and completed the tasks. This tells me that uploading needs to be easy to achieve with a one step process directly on the homepage.</p>
+                  <p class="change-font">Organizing Content</p>
+                    <img src="images/wf-move-1.png" alt="move-part-1" class="center large-image">
+                    <img src="images/wf-move-2.png" alt="move-part-2" class="center large-image">
+                    <img src="images/wf-move-3.png" alt="move-part-3" class="center large-image">
+                  <p>When asked to organize content, users attempted to right click any file on the homescreen. I made the mistake of not prototyping every file, and instead only prototyped the first folder in the drive. Once I they were in the drive, the particpants right clicked ont he folder and completed the move process. Participants liked the pop-up that notified the user where the file or folder moved.
+                  </p>
+                  <p class="change-font">Pinning Content to Vision Board</p>
+                    <img src="images/wf-vb-1.png" alt="" class="center large-image">
+                    <img src="images/wf-vb-2.png" alt="" class="center large-image">
+                    <img src="images/wf-vb-3.png" alt="" class="center large-image">
+                  <p>Participants successfully pinned content to the Vision Board. The feedback received was that users don't need to be prompted as soon as they land on the page.
+                  </p>
+                  <p class="change-font">Tagging and Commenting</p>
+                    <img src="images/wf-tag-or-comment.png" alt="" class="center large-image">
+                    <img src="images/wf-tag.png" alt="" class="center large-image">
+                    <img src="images/wf-tagged.png" alt="" class="center large-image">
+                    <img src="images/comment.png" alt="" class="center large-image">
+                    <p>When asked to tag an individual, participants saw that they also had the option to comment. Participants completed the tasks, but wished that commenting and tagging were a single-step process.</p>
                 <div class="buttons-side-by-side">
                   <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button view-wire-sketch" target="_blank">VIEW WIREFRAME SKETCHES</a>
                   <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button view-wire" target="_blank">VIEW WIREFRAMES</a>
                 </div>
                 <h3>Additional Testing</h3>
-
-                  <p>Once the digital wireframes were created I conducted usability testing to gain insight on how others view and move through the site. The findings were that it was not intuitive to look in drive for the Upload button. This was solved
+                  <p>After conducting the first user tests with the digital wireframes, I conducted additional usability tests to gain insight on how others view and move through the site. The findings from the first usability test were that it was not intuitive to look in drive for the Upload button. This was solved
                     by creating a CTA button on the homepage. I continued to conduct additional testing quickly by creating a paper prototype to conduct preference testing. The findings were that users would like to see a To-Do section on their homepage
                     higher in the hierarchy.
                   </p>
-                  <img src="images/user-testing-sketches.png" alt="" class="center eighty-vw user-test">
+                  <img src="images/ut.png" alt="" class="center eighty-vw user-test">
               </article>
             </div>
         </section>
@@ -329,8 +349,24 @@
             <div class="margin">
               <h1>Visual Design</h1>
                 <article>
-                  <h3>Hi-Fidelity Prototype</h3>
-                    <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
+                  <h3>Hi-Fi Mockups and Testing</h3>
+                    <p>From the prior usability test, I iterated my designs and created High-Fidelity Mockups based on user feedback. I then continued onward conducting in-person testing with these mockups.</p>
+                    <p class="change-font">Desktop and Adding Content</p>
+                      <img src="images/Homepage.png" alt="" class="center large-image">
+                      <p>In this mockup, I created a Quick Access section where users have the option to switch between Recent, Starred, and Shared. This decision allows the most important aspects to be on display without having to scroll the page. Upload buttons were added to the homepage, and the Calendar was switched to a horizontal scroll which moves with actual-time. As for the side-navigation, I added icons to each menu item as well as the option to collaps the navigation. Instead of alerts being at the top center of the page, I added and alerts section with a drop-down menu for notifications. Particpants liked that the homepage made everything easily accessible and they could upload from here. However, the sections and the tiles are the same shade of blue and blend together.</p>
+                    <p class="change-font">Organizing Content</p>
+                      <img src="images/hifi-move.png" alt="" class="center large-image">
+                      <p>For organizing content, I prototyped the file and folder tiles and kept the process the same. I added the move-icon that is shown when you are inside a file. Users liked this and said it created consistency and acted as a reminder of the task at hand.</p>
+                    <p class="change-font">Pinning to Vision Board</p>
+                      <img src="images/hifi-vb-1.png" alt="" class="center large-image">
+                      <img src="images/hifi-vb-2.png" alt="" class="center large-image">
+                      <p>Pinning to a Vision Board, I changed the prompted pop up to a call-to-action blue tile. Once clicked, users are prompted with the option to include a hyperlink or to upload content. Participants liked this design better, and felt the CTA button was instinctive.</p>
+                    <p class="change-font">Tagging and Commenting</p>
+                      <img src="images/hifi-tc-1.png" alt="" class="center large-image">
+                      <img src="images/hifi-tc-2.png" alt="" class="center large-image">
+                      <p>In response to the feedback from the wireframe usability tests, I combined the tagging and commenting feature. It is still accessed by highlighting a section and right clicking "Tag/Comment". Here, the users type their tag or comment, and click enter. After clicking enter, a small post-it icon appears for the section where the comment is located, and the area remains highlighted. Participants liked this idea, but when it came to saving the post-it, half the participants were confused and required extra guidance.</p>
+                  <h3>A/B Testing</h3>
+                    <p> With the style guide created, I built a mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                       remained cohesive.</p>
                       <div class="hi-fi-testing">
                         <div class="ut-1">
@@ -342,26 +378,27 @@
                             <p> 52% of users chose the blue sections over dividers.</p>
                         </div>
                       </div>
-                    <img src="images/first-hifi.png" alt="" class="center first-hifi eighty-vw">
-                    <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
+                    <p> From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                       try a new approach that allowed users to easily change without excessive scrolling.
 
                       My User testing results were that both my desktop and mobile were easy to navigate. Creating a Create icon was beneficial to a simpler flow. Moving, sharing, and starring was streamlined across both mobile and desktop. The goal was to
                       keep things as uniform as possible across both devices.</p>
+
                 </article>
                 <article>
                   <h3>Final Outcome</h3>
-                    <p>
-                      I created boxes for each section and used the light blue only for an upcoming event for the day and the document tiles. I changed the name of the original Calendar to Agenda, and created a separate section for a calendar so that users
-                      could view both their agenda and monthly calendar on their homepage. The Agenda went back to a vertical scroll which the tick would move in real-time. The side navigation bar is collapsible, and it is on every page throughout the
-                      prototype. Instead of having an upload button, there is a create icon where a pop out occurs with the options to create a document, spreadsheet, presentation, vision board, upload, and folder.
-                    </p>
+                  <p class="change-font">Desktop and Mobile Home, Adding Content</p>
                     <img src="images/desktop-1.png" alt="" class="center desktop">
                     <img src="images/desktop-2.png" alt="" class="center desktop">
                     <div class="final-mobile">
                       <img src="images/mobile-1.png" alt="" class="center mob-1 mobile-proto">
                       <img src="images/mobile-2.png" alt="" class="center mob-2 mobile-proto">
                     </div>
+                      <p>I created boxes for each section and used the light blue only for an upcoming event for the day and the document tiles. I changed the name of the original Calendar to Agenda, and created a separate section for a calendar so that users
+                        could view both their agenda and monthly calendar on their homepage. The Agenda went back to a vertical scroll which the tick would move in real-time. The side navigation bar is collapsible, and it is on every page throughout the
+                        prototype. Instead of having an upload button, there is a create icon where a pop out occurs with the options to create a document, spreadsheet, presentation, vision board, upload, and folder.
+                      </p>
+                  <p class="change-font">Organizing Content</p>
                 </article>
                 <article>
                   <h3>Conclusion + Takeaways</h3>
@@ -377,7 +414,7 @@
             </section>
           </div>
         <footer>
-          <h4>Let's Connect!</h4>
+          <h3 class="enlarge">Let's Connect!</h3>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
               <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
@@ -386,7 +423,7 @@
             <a href="contact.html">
             <img src="images/mail.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
           </div>
-          <h6>Copyright Alana Macedo 2020</h6>
+          <h6>© Alana Macedo 2020</h6>
         </footer>
       </div>
   </body>
