--- a/project.html
+++ b/project.html
@@ -399,6 +399,13 @@
                         prototype. Instead of having an upload button, there is a create icon where a pop out occurs with the options to create a document, spreadsheet, presentation, vision board, upload, and folder.
                       </p>
                   <p class="change-font">Organizing Content</p>
+                    <img src="images/final-move.png" alt="" class="center large-image">
+                  <p class="change-font">Pinning to Vision Board</p>
+                    <img src="images/final-vb.png" alt="" class="center large-image">
+                  <p class="change-font">Tagging and Commenting</p>
+                    <img src="images/final-com-tag-1.png" alt="" class="center large-image">
+                    <img src="images/final-com-tag-2.png" alt="" class="center large-image">
+                      <p>I changed the design of the post-it to a pop-out that is cohesive with the other pop-outs. I created and "Upload" CTA button. Participants successfully tagged and left a comment with the addition of the upload button. Users appreaciated the additional feature of viewing the comments on the side of the page, rather than the original idea of a post it appearing with the comment or tag.</p>
                 </article>
                 <article>
                   <h3>Conclusion + Takeaways</h3>
