--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -11,6 +12,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <!-- My Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
@@ -58,6 +60,7 @@
         </header>
       </nav>
       <div class="main-container">
+        <!-- BOX-1 -->
         <div class="box-1">
           <div class="smaller-margin">
             <div class="logo-text-button">
@@ -115,6 +118,7 @@
           </div>
         </section>
         <section>
+          <!-- RESEARCH AND DISCOVERY -->
           <div class="box-2">
             <div class="margin">
               <h1 class="add-margin-top">Research + Discovery</h1>
@@ -297,7 +301,7 @@
               </div>
             </div>
         </section>
-
+        <!-- INFORMATION ARCHITECTURE -->
         <section>
           <div class="margin">
             <h1>Information Architecture</h1>
@@ -433,6 +437,7 @@
               </article>
             </div>
         </section>
+        <!-- BRANDING AND IDENTITY -->
         <section>
           <div class="box-3">
             <div class="margin add-margin-top">
@@ -476,12 +481,15 @@
                       </p>
                       <p class="change-font">Typeface</p>
                       <img src="images/type-hierarchy.png" alt="" class="center fonts-used eighty-vw add-margin-below">
-
+                      <p>
+                        Above is an example of the typeface hierarchy in Vision. Page headers are font family Muli, 36 pts, in bold. The sub header links are Muli, 24pts, in bold. The title of the documents on the tile are font family Montserrat 12pts in bold, and the last modification in regular.
+                      </p>
                     <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1" class="button" target="_blank">VIEW STYLE GUIDE</a>
                   </article>
                 </div>
               </div>
           </section>
+          <!-- VISUAL DESIGN -->
           <section>
             <div class="margin">
               <h1>Visual Design</h1>
