--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>My Contact Page</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -65,7 +66,7 @@
           <!--<p class="sub-text">Send me a message below, I would love to hear from you!</p>-->
         </div>
         <!-- CONTACT FORM -->
-        <form action="https://formspree.io/xknqvrkg"method="POST" target="_blank">
+        <form action="https://formspree.io/xknqvrkg" method="POST" target="_blank">
         <div class="flexible">
           <p class="sub-text">Send me a message below, I would love to hear from you!</p>
         </div>
@@ -101,11 +102,11 @@
       <h3 class="enlarge">Let's Connect!</h3>
       <div class="footer-icons">
         <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
-          <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+          <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media"></a>
         <a href="https://github.com/alanamacedo" target="_blank">
-          <img src="images/github.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
+          <img src="images/github.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb"></a>
         <a href="contact.html">
-        <img src="images/mail.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
+        <img src="images/mail.png" alt="images/email-icon.png" class="social-media"></a>
       </div>
       <h6 class="copyright">© Alana Macedo 2020</h6>
     </footer>
