--- a/about.html
+++ b/about.html
@@ -74,9 +74,9 @@
           <h3 class="enlarge">Let's Connect!</h3>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
-              <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media"></a>
+              <img src="images/linkedin.png" alt="images/linked-in-icon.png" class="social-media"></a>
             <a href="https://github.com/alanamacedo" target="_blank">
-              <img src="images/github.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb"></a>
+              <img src="images/github.png" alt="images/facebook-icon.png" class="social-media fb"></a>
             <a href="contact.html">
             <img src="images/mail.png" alt="images/email-icon.png" class="social-media"></a>
           </div>
