--- a/contact.html
+++ b/contact.html
@@ -71,22 +71,28 @@
           <p class="sub-text">Send me a message below, I would love to hear from you!</p>
         </div>
           <div class="name">
+            <div class="block">
               <ul class="contact-info">
                 <li class="contact">Full Name:</li>
                 <input class="textbox" type="text" name="name">
               </ul>
+            </div>
           </div>
           <div class="email">
+            <div class="block">
               <ul class="contact-info">
                 <li class="contact">Email:</li>
                 <input class="textbox" type="text" name="_replyto">
               </ul>
+            </div>
           </div>
           <div class="message">
+            <div class="block">
               <ul class="contact-info">
                 <li class="contact">Message:</li>
                 <textarea name="message"></textarea>
               </ul>
+            </div>
           </div>
           <input type="submit" id="button" value="SEND MESSAGE">
         </form>
