--- a/project.html
+++ b/project.html
@@ -77,20 +77,20 @@
             <a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" class="button proto-button" id="proto-button" target="_blank">VIEW PROTOTYPE</a>
           </div>
           <div class="proto-image">
-            <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
+            <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto mobile-below">
           </div>
         </div>
       </div>
       <div class="accomplished">
         <ul class="roles">
-          <h2 class="how">Design roles</h2>
+          <li class="how">Design roles</li>
           <hr>
           <li class="top">UX Research and Design</li>
           <li>Branding and Identity</li>
           <li>Visual Design</li>
         </ul>
         <ul class="deliverables">
-          <h2 class="how">Deliverables</h2>
+          <li class="how">Deliverables</li>
           <hr>
           <li class="top">User Surveys</li>
           <li>User Interviews</li>
@@ -105,7 +105,7 @@
           <li>Visual Design</li>
         </ul>
         <ul class="tools">
-          <h2 class="how">Tools</h2>
+          <li class="how">Tools</li>
           <hr>
           <li class="top">Pen/Paper</li>
           <li>Google Suite</li>
