--- a/contact.html
+++ b/contact.html
@@ -72,26 +72,26 @@
         </div>
           <div class="name">
             <div class="block">
-              <ul class="contact-info">
-                <li class="contact">Full Name:</li>
+              <div class="contact-info">
+                <div class="contact">Full Name:</div>
                 <input class="textbox" type="text" name="name">
-              </ul>
+              </div>
             </div>
           </div>
           <div class="email">
             <div class="block">
-              <ul class="contact-info">
-                <li class="contact">Email:</li>
+              <div class="contact-info">
+                <div class="contact">Email:</div>
                 <input class="textbox" type="text" name="_replyto">
-              </ul>
+              </div>
             </div>
           </div>
           <div class="message">
             <div class="block">
-              <ul class="contact-info">
-                <li class="contact">Message:</li>
+              <div class="contact-info">
+                <div class="contact">Message:</div>
                 <textarea name="message"></textarea>
-              </ul>
+              </div>
             </div>
           </div>
           <input type="submit" id="button" value="SEND MESSAGE">
